--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Tuto Netify</title>
 </head>
 <body>
-    <h1>Netify</h1>
-    <h2>Test micro 1 2 1 2 </h2>
+    <h1>Site web</h1>
+    <h2>Test</h2>
     
 </body>
 </html>
